# rust-ai-ui

./: .gitignore  Cargo.toml  Google Collab.ipynb
ai-tests/: Cargo.toml
rust-ai-ui-server/: Cargo.toml
rust-ai-ui-server/src/: main.rs
rust-ai-ui-server/src/model/: mod.rs
rust-ai-ui-website/: Cargo.toml
rust-ai-ui-website/src/: graphql.rs  main.rs
server/src/: main.rs
server/src/model/: mod.rs
website/: Cargo.toml  schema.graphql
website/src/: graphql.rs
