[package]
name = "rust-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-bert = { version = "0.20.1-alpha", git = "https://github.com/guillaume-be/rust-bert", branch = "master", features = ["remote", "cached-path"] }
tch = "0.11.0"
torch-sys = "0.11.0"

[[bin]]
name = "gpt2"

[[bin]]
name = "question_answering"

[[bin]]
name = "gptj"
