[package]
name = "rust-ai-ui-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["http2"] }
async-graphql = "5.0.6"
async-graphql-rocket = "5.0.6"
futures-core = "0.3.27"
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["io-util"] }
tokio-stream = "0.1.12"
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
async-stream = "0.3.4"
serde_json = "1.0.94"

#rocket = { path = "../../Rocket" }

#[replace]
#"rocket:0.5.0-rc.2" = { git = "https://github.com/Mai-Lapyst/Rocket.git", branch = "websockets" }
