[package]
name = "rust-ai-ui-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["http2"] }

async-graphql = "5.0.6"
async-graphql-rocket = "5.0.6"

futures-core = "0.3.27"
futures = "0.3.27"

tokio = { version = "1.26.0", features = ["io-util"] }
tokio-stream = "0.1.12"

async-stream = "0.3.4"
async-channel = "1.8.0"

tungstenite = "0.18.0"
tokio-tungstenite = "0.18.0"

serde_json = "1.0.94"
